# Wayward

./: .gitignore  main.c  meson.build
include/: output.h  server.h
src/: main.c  output.c
